--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
-<h3>Subtitol</h3>
-<p>Benvinguts a la meva primera <span style="color:blue">pàgina web</span>
-</p>
-
-</body><h1 id="titol" class="vermell">Hola Mundo </h1>
-
-<h3 id="subtitol">Subtitol</h3>
-<h3 id="subtitol2" class="vermell">subtitol2</h3>
-
-<div><img src="img/perro.jpg" alt="Hola"></div>
+    <ol>
+        <li><a href="horari/horari.html">horaris</a></li>
+    </ol>
+</body>
 </html>
